2021-08-24  Alex Christensen  <achristensen@webkit.org>

        Unprefix -webkit-backface-visibility
        https://bugs.webkit.org/show_bug.cgi?id=170983

        Reviewed by Simon Fraser.

        * web-platform-tests/css/css-cascade/all-prop-initial-xml-expected.txt:
        * web-platform-tests/css/css-transforms/css-transform-property-existence-expected.txt: Added.
        * web-platform-tests/css/css-transforms/css-transform-property-existence.html: Added.
        * web-platform-tests/css/css-transforms/parsing/backface-visibility-computed-expected.txt:
        * web-platform-tests/css/css-transforms/parsing/backface-visibility-valid-expected.txt:
        * web-platform-tests/css/cssom/cssstyledeclaration-csstext-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-001-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-001-expected.txt:
        * web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-001-expected.txt:

2021-08-24  Chris Dumez  <cdumez@apple.com>

        Fire a load event for <iframe src="about:blank#foo">
        https://bugs.webkit.org/show_bug.cgi?id=228958
        <rdar://problem/82035810>

        Reviewed by Darin Adler.

        Import layout test coverage from WPT.

        * web-platform-tests/html/browsers/browsing-the-web/navigating-across-documents/initial-empty-document/initial-content-replacement-expected.txt: Added.
        * web-platform-tests/html/browsers/browsing-the-web/navigating-across-documents/initial-empty-document/initial-content-replacement.html: Added.
        * web-platform-tests/html/browsers/browsing-the-web/navigating-across-documents/initial-empty-document/load-event-iframe-element-expected.txt: Added.
        * web-platform-tests/html/browsers/browsing-the-web/navigating-across-documents/initial-empty-document/load-event-iframe-element.html: Added.