@@ -1,3 +1,14 @@
+2021-08-24  Antti Koivisto  <antti@apple.com>
+
+        [CSS Cascade Layers] Import basic tests
+        https://bugs.webkit.org/show_bug.cgi?id=229441
+
+        Reviewed by Tim Horton.
+
+        * web-platform-tests/css/css-cascade/layer-basic-expected.txt: Added.
+        * web-platform-tests/css/css-cascade/layer-basic.html: Added.
+        * web-platform-tests/css/css-cascade/w3c-import.log:
+
 2021-08-24  Alex Christensen  <achristensen@webkit.org>
 
         Unprefix -webkit-backface-visibility
